tests/fixtures/invalid/bytes_pos.py
# Cannot use unary + on bytes
x: bytes = +b"hello"
